--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -124,17 +124,17 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: 200px;
 
   @include breakpoint($large) {
     display: block;
-    width: 200px;
-    height: 200px;
+    width: auto;
+    height: auto;
   }
 
   img {
-    max-width: 110px;
+    max-width: 170px;
     border-radius: 10%;
 
     @include breakpoint($large) {
